fixed chrome placeholder text clipping

--- a/localhost/core/static/core/css/base.css
+++ b/localhost/core/static/core/css/base.css
@@ -71,3 +71,7 @@ p {
     flex-direction: row !important;
   }
 }
+
+::-webkit-input-placeholder {
+  height: 2rem;
+}
